# LPR_OpenCV

./: CMakeLists.txt  README.md  build.gradle
src/androidTest/java/com/wangbin/lpr_opencv/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/java/com/wangbin/lpr_opencv/: ImageProcess.java  MainActivity.java  ValueOfImgproc.java
src/main/jni/: com_wangbin_lpr_opencv_OpenCVHelper.h
src/main/res/layout/: activity_main.xml
src/main/res/values/: colors.xml  dimens.xml  strings.xml
src/test/java/com/wangbin/lpr_opencv/: ExampleUnitTest.java
